fix input circle align

--- a/src/components/base/TextField/TextField.scss
+++ b/src/components/base/TextField/TextField.scss
@@ -123,8 +123,8 @@
       align-items: center;
       border-radius: radius('circle');
       font-size: $font-4;
-      margin-top: -1px;
       padding: spacing(2);
+      padding-top: 0.8rem;
       height: spacing(10);
       width: spacing(10);
       text-align: center;
@@ -134,7 +134,6 @@
 
   &--quantity-medium {
     input {
-      padding: 0;
       font-size: $font-3;
       height: spacing(9);
       width: spacing(9);
@@ -147,6 +146,7 @@
       font-size: $font-2;
       height: spacing(7);
       width: spacing(7);
+      padding-top: 0.3rem;
     }
   }
 }
